[metadata]
name = boimmg
version = 0.0.1
description = boimmg
long_description = file: README.md
keywords = boimmg
author = ...
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    cobra~=0.21.0
    pandas~=1.2.3
    numpy~=1.19.2
    python-libsbml
    requests~=2.22.0
    biopython
    lxml
    openpyxl
    biocyc~=0.2.0
    sympy~=1.7.1
    neo4j~=4.2.1
    cobrababel~=0.1.3
    rdkit-pypi==2022.9.4
    setuptools~=52.0.0

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
boimmgpy = py.typed

[flake8]
max-line-length = 160